# CleanRTOS

./: CMakeLists.txt
src/: crt_MainInits.h
